Implemented cell type search and updated CT ui code.
