# projects/ccf-shared/src/lib/services/data-source/api-endpoint.service.ts
@@ -26,11 +26,12 @@ const METHOD_TO_DATASET: Record<keyof DataSource, string> = {
   getProviderNames: 'provider-names',
   getDatasetTechnologyNames: 'technology-names',
   getOntologyTreeModel: 'ontology-tree-model',
+  getCellTypeTreeModel: 'cell-type-tree-model',
   getReferenceOrgans: 'reference-organs',
   getTissueBlockResults: 'tissue-blocks',
   getAggregateResults: 'aggregate-results',
   getOntologyTermOccurences: 'ontology-term-occurences',
-  getCellTypeTermOccurences: 'ontology-term-occurences',
+  getCellTypeTermOccurences: 'cell-type-term-occurences',
   getScene: 'scene',
   getReferenceOrganScene: 'reference-organ-scene'
 };
